--- a/styles/slider/slider.scss
+++ b/styles/slider/slider.scss
@@ -1,9 +1,20 @@
 .slider-section {
   background-color: #2b2b2b;
+  display: flex;
+  flex-direction: column;
+  .slider-title {
+    padding: 34px 0 31px;
+    h2 {
+      color: #f4f4f4;
+      font-size: 24px;
+      font-weight: 300;
+    }
+  }
   .slider-arrow {
     width: 18px;
     height: 35px;
     object-fit: cover;
+    cursor: pointer;
   }
   #next-arrow {
     transform: rotate(180deg);
@@ -12,13 +23,38 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 30px;
+    margin: 50px 0 25px;
   }
   .slide {
+    max-width: 980px;
+    width: 100%;
+  }
+  .slides-box {
     display: flex;
     align-items: center;
-    max-width: 980px;
     justify-content: space-between;
-    width: 100%;
+  }
+  .last-slide {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.slider-bullets {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 50px;
+
+  .bullet {
+    width: 6px;
+    height: 6px;
+    background-color: #e8e6e6;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    &.active {
+      background-color: #fff;
+    }
   }
 }
