--- a/styles/questions/questions.css
+++ b/styles/questions/questions.css
@@ -46,7 +46,7 @@
   justify-content: space-between;
   position: relative;
   flex-direction: column;
-  padding: 24px 0;
+  padding: 30px 0;
   border-bottom: 1px solid #353131;
 }
 .faq-section .faq-list .faq-item.active img {
@@ -70,19 +70,17 @@
   cursor: pointer;
 }
 .faq-section .faq-list .faq-item .faq-answer {
-  padding: 0;
+  transition: height 0.35s ease-in-out;
   overflow: hidden;
-  height: 0;
-  transition: height 0.3s ease-in-out;
 }
-.faq-section .faq-list .faq-item .faq-answer.visible {
-  height: auto;
-  padding: 20px 0 6px;
+.faq-section .faq-list .faq-item .faq-answer:not(.active) {
+  display: none;
 }
 .faq-section .faq-list .faq-item .faq-answer p {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 2;
   color: #f4f4f4;
+  margin-top: 30px;
 }
 .faq-section .faq-list .faq-item .faq-answer .level {
   font-weight: 700;
