--- a/styles/questions/questions.scss
+++ b/styles/questions/questions.scss
@@ -55,7 +55,7 @@ $base-color: #f4f4f4;
       justify-content: space-between;
       position: relative;
       flex-direction: column;
-      padding: 24px 0;
+      padding: 30px 0;
       border-bottom: 1px solid #353131;
       &.active {
         img {
@@ -79,18 +79,16 @@ $base-color: #f4f4f4;
         cursor: pointer;
       }
       .faq-answer {
-        padding: 0;
+        transition: height 0.35s ease-in-out;
         overflow: hidden;
-        height: 0;
-        transition: height 0.3s ease-in-out;
-        &.visible {
-          height: auto;
-          padding: 20px 0 6px;
+        &:not(.active) {
+          display: none;
         }
         p {
-          font-size: 16px;
+          font-size: 14px;
           line-height: 2;
           color: $base-color;
+          margin-top: 30px;
         }
 
         .level {
