--- a/style.scss
+++ b/style.scss
@@ -29,3 +29,10 @@
   max-width: 980px;
   width: 100%;
 }
+
+@media screen and (max-width: 992px) {
+  .container {
+    // margin: 0 20px;
+    width: 70%;
+  }
+}
