--- a/styles/courses/courses.css
+++ b/styles/courses/courses.css
@@ -19,7 +19,7 @@
 .courses-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   padding-bottom: 58px;
 }
@@ -84,4 +84,10 @@
 }
 .course-box .course-info a:hover {
   color: #0080b0;
+}
+
+@media screen and (max-width: 992px) {
+  .courses-container .course-box {
+    margin: 0;
+  }
 }/*# sourceMappingURL=courses.css.map */
