--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  display: flex;
+  // display: flex;
   background-color: #1a1e1f;
   align-items: center;
   justify-content: space-between;
@@ -9,6 +9,7 @@
   z-index: 2;
   top: 0;
   left: 0;
+  display: none;
 
   .header-container {
     display: flex;
