--- a/styles/courses/courses.scss
+++ b/styles/courses/courses.scss
@@ -27,65 +27,70 @@ $link-font: wf_93c16d86ec9d47d0a2a36894f;
 .courses-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding-bottom: 58px;
-}
-.course-box {
-  border: 1px solid rgb(85, 85, 85);
-  border-radius: 6px;
-  width: 300px;
-  height: 414px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 26px 20px 0;
-  .course-img {
-    height: 150px;
-    img {
-      width: 100%;
-      height: 100%;
-      border-top-right-radius: 6px;
-      border-top-left-radius: 6px;
-      object-fit: cover;
-    }
-  }
-  .course-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 1;
-    padding: 34px 10px 20px 20px;
-  }
-  .text {
-    color: #f4f4f4;
-  }
-  .course-title {
-    font-size: 18px;
-    font-weight: 400;
-  }
-  .registration-status {
-    font-size: 14px;
-    margin-top: 25px;
-    display: inline-block;
-  }
-  .course-info {
-    display: flex;
-    align-items: center;
-    img {
-      width: 17px;
-      height: 16px;
-      object-fit: cover;
-      margin: 12px 11px 7px 0px;
-    }
-    a {
-      text-decoration: none;
-      color: #00aeef;
-      font-size: 16px;
-      display: inline-block;
-      transition: 0.4s;
-      font-family: $link-font;
-      &:hover {
-        color: #0080b0;
+  .course-box-wrapper {
+    width: 33.3%;
+    padding: 10px;
+    .course-box {
+      border: 1px solid rgb(85, 85, 85);
+      border-radius: 6px;
+      display: flex;
+      flex-direction: column;
+      .course-img {
+        height: 150px;
+        img {
+          width: 100%;
+          height: 100%;
+          border-top-right-radius: 6px;
+          border-top-left-radius: 6px;
+          object-fit: cover;
+        }
+      }
+      .course-body {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-grow: 1;
+        padding: 34px 10px 20px 20px;
+      }
+      .text {
+        color: #f4f4f4;
+      }
+      .course-title {
+        h3 {
+          font-size: 18px;
+          font-weight: 400;
+        }
+      }
+      .registration-status {
+        margin-top: 25px;
+        min-height: 100px;
+        p {
+          font-size: 14px;
+        }
+      }
+      .course-info {
+        display: flex;
+        align-items: center;
+        img {
+          width: 17px;
+          height: 16px;
+          object-fit: cover;
+          margin: 12px 11px 7px 0px;
+        }
+        a {
+          text-decoration: none;
+          color: #00aeef;
+          font-size: 16px;
+          display: inline-block;
+          transition: 0.4s;
+          font-family: $link-font;
+          &:hover {
+            color: #0080b0;
+          }
+        }
       }
     }
   }
@@ -93,8 +98,10 @@ $link-font: wf_93c16d86ec9d47d0a2a36894f;
 
 @media screen and (max-width: 992px) {
   .courses-container {
-    .course-box {
-      margin: 0;
+    .course-box-wrapper {
+      .course-box {
+        margin: 0;
+      }
     }
   }
 }
