--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  // display: flex;
+  display: flex;
   background-color: #1a1e1f;
   align-items: center;
   justify-content: space-between;
@@ -7,17 +7,16 @@
   transition: background-color 0.4s, width 0.4s;
   position: fixed;
   z-index: 2;
+  height: 90px;
   top: 0;
   left: 0;
-  display: none;
-
+  .burger-menu {
+    display: none;
+  }
   .header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 980px;
-    width: 100%;
-    margin: 22px auto;
 
     .tbc-academy-logo img {
       width: 182px;
@@ -42,6 +41,33 @@
 
       &:hover {
         color: #00a3e0;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .site-header {
+    .header-container {
+      width: 70%;
+      .tbc-academy-logo {
+        img {
+          width: 155px;
+          height: 100%;
+          -o-object-fit: cover;
+          object-fit: cover;
+        }
+      }
+    }
+    .main-navigation {
+      display: none;
+    }
+    .burger-menu {
+      display: block;
+      img {
+        width: 40px;
+        height: 100%;
+        object-fit: cover;
       }
     }
   }
