--- a/styles/information/information.scss
+++ b/styles/information/information.scss
@@ -15,25 +15,25 @@ $base-font: wf_7737b5e7be24426aa35c9f431;
   background-color: #2b2b2b;
   width: 100%;
   display: flex;
+  padding: 56px 0;
   .course-description {
-    margin: 56px 0 0;
     p {
       color: #f4f4f4;
       font-size: 28px;
     }
   }
-  .read-more-link {
-    text-decoration: none;
-    display: inline-block;
-    margin: 43px 0 57px;
-    transition: 0.4s;
-    span {
+  .read-more {
+    margin-top: 43px;
+    .read-more-link {
+      text-decoration: none;
+      display: inline-block;
+      transition: 0.4s;
       font-size: 20px;
       color: #00aef3;
       font-family: $base-font;
-    }
-    &:hover {
-      color: #aaaaaa;
+      &:hover {
+        color: #aaaaaa;
+      }
     }
   }
 }
