--- a/styles/questions/questions.css
+++ b/styles/questions/questions.css
@@ -19,8 +19,6 @@
 }
 .faq-section .container-faq .view-all {
   text-decoration: none;
-  position: absolute;
-  right: 17%;
 }
 .faq-section .container-faq .view-all span {
   display: inline-block;
@@ -36,7 +34,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 5px 20px 0;
+  margin: 0 0 20px 0;
 }
 .faq-section .faq-title h2 {
   font-weight: 300;
