--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -1,6 +1,6 @@
 .slider-section {
   background-color: #2b2b2b;
-  display: none;
+  display: flex;
   flex-direction: column;
 }
 .slider-section .slider-title {
@@ -57,4 +57,22 @@
 }
 .slider-bullets .bullet.active {
   background-color: #fff;
+}
+
+@media screen and (max-width: 992px) {
+  .slider-section .slides-box {
+    flex-direction: column;
+  }
+  .slider-section .slider-container {
+    margin: 0 0 25px;
+  }
+  .slider-section .slider-arrow {
+    display: none;
+  }
+  .slider-section .slider-title h2 {
+    font-size: 20px;
+  }
+  .slider-section .slides-box img {
+    margin: 20px;
+  }
 }/*# sourceMappingURL=slider.css.map */
