--- a/styles/slider/slider.scss
+++ b/styles/slider/slider.scss
@@ -1,6 +1,6 @@
 .slider-section {
   background-color: #2b2b2b;
-  display: none;
+  display: flex;
   flex-direction: column;
   .slider-title {
     padding: 34px 0 31px;
@@ -56,6 +56,30 @@
     transition: background-color 0.3s ease-in-out;
     &.active {
       background-color: #fff;
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .slider-section {
+    .slides-box {
+      flex-direction: column;
+    }
+    .slider-container {
+      margin: 0 0 25px;
+    }
+    .slider-arrow {
+      display: none;
+    }
+    .slider-title {
+      h2 {
+        font-size: 20px;
+      }
+    }
+    .slides-box {
+      img {
+        margin: 20px;
+      }
     }
   }
 }
