--- a/styles/banner/banner.scss
+++ b/styles/banner/banner.scss
@@ -45,10 +45,11 @@ $base-color: rgb(244, 244, 244);
       .banner-title {
         margin-bottom: 0;
         h1 {
-          font-size: 35px;
+          font-size: 28px;
+          margin-bottom: 2px;
         }
         h2 {
-          font-size: 30px;
+          font-size: 26px;
         }
       }
     }
