--- a/styles/footer/footer.css
+++ b/styles/footer/footer.css
@@ -2,62 +2,99 @@
   background-color: #1a1e1f;
   display: flex;
 }
-.site-footer .footer-logos-container {
-  display: flex;
-  margin: 64px 0 27px;
+.site-footer .footer-container {
   justify-content: space-between;
+  padding: 64px 0 43px;
+  display: flex;
 }
-.site-footer .footer-logos-container .tbc-logo {
+.site-footer .footer-container .tbc-logo {
   width: 106px;
   height: 30px;
+}
+.site-footer .footer-container .tbc-logo img {
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
-.site-footer .footer-logos-container .social-media-logos img {
-  width: 39px;
-  height: 39px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.site-footer .footer-logos-container a {
-  text-decoration: none;
-}
-.site-footer .footer-logos-container .facebook-logo {
-  margin-right: 7px;
-}
-.site-footer .footer-text {
+.site-footer .footer-container .footer-text {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.site-footer .footer-text .copyright-terms-box .copyright-box span {
+.site-footer .footer-container .footer-text .copyright-terms-box .copyright-text {
+  margin: 27px 0 15px;
+}
+.site-footer .footer-container .footer-text .copyright-terms-box .copyright-text span {
   color: #fff;
   font-size: 14px;
 }
-.site-footer .footer-text .copyright-terms-box a {
+.site-footer .footer-container .footer-text .copyright-terms-box a {
   text-decoration: none;
   cursor: pointer;
   color: #fff;
   transition: 0.4s;
   font-size: 14px;
 }
-.site-footer .footer-text .copyright-terms-box .terms-link {
+.site-footer .footer-container .footer-text .copyright-terms-box .terms-link {
   display: inline-block;
-  margin: 15px 0 43px;
 }
-.site-footer .footer-text .copyright-terms-box .terms-link:hover {
+.site-footer .footer-container .footer-text .copyright-terms-box .terms-link:hover {
   color: #aaaaaa;
 }
-.site-footer .footer-text .contact-link {
+.site-footer .footer-container .contact-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.site-footer .footer-container .contact-box .social-media-logos {
+  display: flex;
+  justify-content: flex-end;
+}
+.site-footer .footer-container .contact-box .social-media-logos img {
+  width: 39px;
+  height: 39px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.site-footer .footer-container .link {
+  display: none;
+}
+.site-footer .footer-container .contact-email-responsive {
+  display: block;
+}
+.site-footer .footer-container .contact-link {
   border-radius: 6px;
   text-decoration: none;
   color: #fff;
   padding: 7px 30px;
-  margin: 0 0 30px;
   background-color: #00aef3;
   transition: 0.4s;
 }
-.site-footer .footer-text .contact-link:hover {
+.site-footer .footer-container .contact-link:hover {
   background-color: #d5d5d5;
   color: #353131;
+}
+.site-footer .footer-container .facebook-logo {
+  margin-right: 7px;
+}
+
+@media screen and (max-width: 992px) {
+  .site-footer .footer-container .contact-email-responsive {
+    display: none;
+  }
+  .site-footer .footer-container .link {
+    display: block;
+    margin-top: 40px;
+  }
+  .site-footer .footer-container .contact-box {
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  .site-footer .footer-container .social-media-logos {
+    margin-bottom: 15px;
+  }
+  .site-footer .footer-container .social-media-logos .facebook-logo {
+    margin-right: 15px;
+  }
 }/*# sourceMappingURL=footer.css.map */
