--- a/styles/questions/questions.scss
+++ b/styles/questions/questions.scss
@@ -26,16 +26,17 @@ $base-color: #f4f4f4;
     padding: 100px 40px;
     .view-all {
       text-decoration: none;
-      span {
-        display: inline-block;
-        color: #00aef3;
-        font-size: 20px;
-        transition: 0.4s;
-        font-family: $view-all-font;
-        &:hover {
-          color: #aaaaaa;
-        }
+      color: #00aef3;
+      font-size: 20px;
+      transition: 0.4s;
+      font-family: $view-all-font;
+      &:hover {
+        color: #aaaaaa;
       }
+    }
+    .view-all-responsive {
+      display: none;
+      text-align: center;
     }
   }
   .faq-title {
@@ -106,10 +107,18 @@ $base-color: #f4f4f4;
 @media screen and (max-width: 992px) {
   .faq-section {
     .container-faq {
-      .view-all {
-        bottom: 30px;
-        right: 50%;
-        transform: translateX(50%);
+      padding: 50px 30px;
+      .faq-list {
+        .faq-item {
+          padding: 25px 0;
+        }
+      }
+      .view {
+        display: none;
+      }
+      .view-all-responsive {
+        display: block;
+        margin-top: 30px;
       }
     }
     .faq-title {
