--- a/styles/slider/slider.scss
+++ b/styles/slider/slider.scss
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 50px 0 25px;
+    // height: 170px;
   }
   .slide {
     max-width: 980px;
