--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -18,12 +18,43 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 .site-header .header-container .tbc-academy-logo img {
   width: 182px;
   height: 40px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.respo-navigation {
+  position: absolute;
+  right: 0;
+  background-color: rgba(34, 34, 34, 0.5);
+  width: 100%;
+  height: 100vh;
+  top: -25px;
+  display: none;
+}
+.respo-navigation .mobile-navigation {
+  position: absolute;
+  background-color: rgb(34, 34, 34);
+  right: 0;
+  height: 100vh;
+  width: 60%;
+  display: flex;
+  justify-content: flex-end;
+  text-align: right;
+}
+.respo-navigation .mobile-navigation .menu-list {
+  display: block;
+  margin-top: 80px;
+}
+.respo-navigation .mobile-navigation .menu-list li {
+  margin: 20px 0;
+}
+.respo-navigation .mobile-navigation .menu-list li a {
+  padding: 0 25px;
 }
 
 .menu-list {
@@ -53,12 +84,42 @@
     display: none;
   }
   .site-header .burger-menu {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 21px;
+    width: 26px;
+    transition: transform 0.33s ease-out;
   }
-  .site-header .burger-menu img {
-    width: 40px;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+  .site-header .burger-menu .burger {
+    background-color: #fff;
+    border-radius: 1.5px;
+    height: 3px;
+    width: 27px;
+    border-radius: 2px;
+  }
+  .site-header .burger-menu .burger1,
+  .site-header .burger-menu .burger3 {
+    width: 50%;
+    transition: transform 0.33s cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  }
+  .site-header .burger-menu .burger3 {
+    align-self: flex-end;
+  }
+  .site-header .open-menu {
+    display: flex;
+    flex-direction: column;
+    transform: rotate(-45deg);
+  }
+  .site-header .open-menu .burger1 {
+    transform: rotate(-90deg) translateX(4px);
+    transform-origin: right;
+  }
+  .site-header .open-menu .burger-2 {
+    width: 27px !important;
+  }
+  .site-header .open-menu .burger3 {
+    transform: rotate(-90deg) translateX(-4px);
+    transform-origin: left;
   }
 }/*# sourceMappingURL=header.css.map */
