--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 
     .tbc-academy-logo img {
       width: 182px;
@@ -25,12 +26,40 @@
     }
   }
 }
+.respo-navigation {
+  position: absolute;
+  right: 0;
+  background-color: rgba(34, 34, 34, 0.5);
+  width: 100%;
+  height: 100vh;
+  top: -25px;
+  display: none;
+  .mobile-navigation {
+    position: absolute;
+    background-color: rgb(34, 34, 34);
+    right: 0;
+    height: 100vh;
+    width: 60%;
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+    .menu-list {
+      display: block;
+      margin-top: 80px;
+      li {
+        margin: 20px 0;
+        a {
+          padding: 0 25px;
+        }
+      }
+    }
+  }
+}
 
 .menu-list {
   display: flex;
   list-style: none;
   align-items: center;
-
   li {
     a {
       color: #fff;
@@ -62,11 +91,44 @@
       display: none;
     }
     .burger-menu {
-      display: block;
-      img {
-        width: 40px;
-        height: 100%;
-        object-fit: cover;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 21px;
+      width: 26px;
+      transition: transform 0.33s ease-out;
+      .burger {
+        background-color: #fff;
+        border-radius: 1.5px;
+        height: 3px;
+        width: 27px;
+        border-radius: 2px;
+      }
+      .burger1,
+      .burger3 {
+        width: 50%;
+        transition: transform 0.33s cubic-bezier(0.54, -0.81, 0.57, 0.57);
+      }
+      .burger3 {
+        align-self: flex-end;
+      }
+    }
+    .open-menu {
+      display: flex;
+      flex-direction: column;
+      transform: rotate(-45deg);
+
+      .burger1 {
+        transform: rotate(-90deg) translateX(4px);
+        transform-origin: right;
+      }
+      .burger-2 {
+        width: 27px !important;
+      }
+
+      .burger3 {
+        transform: rotate(-90deg) translateX(-4px);
+        transform-origin: left;
       }
     }
   }
