--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -44,7 +44,7 @@
     }
   }
 }
-.respo-navigation {
+.respo-fade {
   position: absolute;
   right: 0;
   background-color: rgba(34, 34, 34, 0.5);
@@ -52,18 +52,43 @@
   height: 100vh;
   top: -25px;
   display: none;
+  transition: transform 0.4s cubic-bezier(0.06, -0.22, 0.66, 0.31);
+}
+.respo-navigation {
+  // position: absolute;
+  // right: 0;
+  // background-color: rgba(34, 34, 34, 0.5);
+  // width: 100%;
+  // height: 100vh;
+  // top: -25px;
+  // display: none;
   .mobile-navigation {
     position: absolute;
-    background-color: rgb(34, 34, 34);
     right: 0;
     height: 100vh;
     width: 60%;
     display: flex;
     justify-content: flex-end;
     text-align: right;
+    transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+    &::after {
+      background-color: rgb(34, 34, 34);
+      content: "";
+      height: 100vh;
+      width: 60vw;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 1;
+      transform: translateX(100%);
+    }
+    &.active::after {
+      transform: translateX(0);
+    }
     .menu-list {
       display: block;
       margin-top: 80px;
+      z-index: 1;
       li {
         margin: 20px 0;
         a {
@@ -96,6 +121,7 @@
       height: 21px;
       width: 26px;
       transition: transform 0.33s ease-out;
+      z-index: 1;
       .burger {
         background-color: #fff;
         border-radius: 1.5px;
