create slider animation and add footer terms container

--- a/styles/slider/slider.scss
+++ b/styles/slider/slider.scss
@@ -33,6 +33,7 @@
   .slide {
     max-width: 980px;
     width: 100%;
+    animation: sliderAnimation 0.7s linear both;
   }
 
   .slides-box {
@@ -71,6 +72,40 @@
       background-color: #fff;
     }
   }
+}
+
+// keyframe animation
+
+@keyframes sliderAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes sliderAnimationRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes sliderAnimationLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slideRightAnime {
+  animation: sliderAnimationRight 0.4s linear both !important;
+}
+.slideLeftAnime {
+  animation: sliderAnimationLeft 0.4s linear both !important;
 }
 
 @media screen and (max-width: 992px) {
