--- a/styles/footer/footer.scss
+++ b/styles/footer/footer.scss
@@ -1,5 +1,5 @@
 $base-color: #fff;
-$font-size: $text-size;
+$text-size: 14px;
 
 .site-footer {
   background-color: #1a1e1f;
@@ -81,6 +81,52 @@ $font-size: $text-size;
       margin-right: 7px;
     }
   }
+}
+
+.footer-terms {
+  background-color: rgba(22, 22, 22, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1000;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  &.active {
+    display: block;
+  }
+  .footer-terms-container {
+    background-color: #2b2b2b;
+    width: 50%;
+    height: 100vh;
+    padding: 100px 30px 50px 50px;
+    margin-left: auto;
+    position: relative;
+    transform: translateX(100%);
+    transition: all ease-out 0.6s;
+    .footer-terms-close {
+      width: 30px;
+      height: 30px;
+      background-color: red;
+      position: absolute;
+      top: 50px;
+      right: 50px;
+    }
+  }
+}
+
+@keyframes footerTermAnime {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.footer-terms.active .footer-terms-container {
+  animation: footerTermAnime 0.4s cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  animation-fill-mode: forwards;
 }
 
 @media screen and (max-width: 992px) {
